<resources>
    <!-- App-wide Strings -->
    <string name="app_name">Show &amp; Sell</string>
    <string name="saved_data_file_key" translatable="false">com.insertcoolnamehere.showandsell.SAVED_DATA</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Must be 4+ characters</string>
    <string name="error_incorrect_email">No such user exists</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_item_detail" translatable="false">ItemDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_donate" translatable="false">DonateActivity</string>
    <string name="title_activity_main">Show &amp; Sell</string>
    <string name="userId" translatable="false">UserId</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="server_client_id" translatable="false">367846868936-rjqg6pp4g4glrrg9vdntbc2lrh2lo5ld.apps.googleusercontent.com</string>

    <!-- CreateAccountActivity -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="error_password_match">Passwords must match</string>
    <string name="error_email_duplicate">Email already in use</string>

    <!-- MainActivity -->
    <string name="action_logout">Logout</string>
    <string name="section_format" translatable="false">Hello %1$s from section: %2$d</string>
    <string name="browse_fragment_title">Browse</string>
    <string name="bookmark_fragment_title">Bookmarks</string>
    <string name="choose_group_fragment_title">Choose Group</string>

    <!-- Donate Activity -->
    <string name="prompt_item_description">Name</string>
    <string name="prompt_item_details">Details</string>
    <string name="prompt_item_condition">Condition</string>
    <string name="prompt_suggested_price">Suggested Price</string>
    <string-array name="possible_conditions">
        <item>Used</item>
        <item>New</item>
    </string-array>
    <string name="condition_new" translatable="false">New</string>
    <string name="condition_used" translatable="false">Used</string>
    <string name="prompt_image_upload">Tap the icon to take a picture</string>
    <string name="prompt_picture_taken">Picture Taken!</string>
    <string name="action_donate">Donate</string>
    <string name="step_take_pic_label"><b>Show</b> me what you want to sell</string>
    <string name="step_title_label">What is this?</string>
    <string name="step_details_label"><b>Tell</b> me more</string>
    <string name="step_price_label">How much is it worth?</string>
    <string name="step_condition_label">Is it new or used?</string>
    <string name="next_step_btn_label">Continue</string>
    <string name="prev_step_btn_label">Previous</string>
    <string name="successful_donation">Thank you for your donation!</string>
    <string name="error_donate">An error occurred during donation.</string>
    <string name="error_group_not_found">Group Not Found</string>
    <string name="prompt_donate_cash_link"><u>Or, donate money directly to this group</u></string>
    <string name="donate_to_group_pattern">Donate to </string>

    <!-- Item detail -->
    <string name="item_description">Description</string>
    <string name="item_details">Details</string>
    <string name="item_condition">Condition</string>
    <string name="item_image">Image of Item</string>
    <string name="action_buy">Buy</string>
    <string name="prompt_comment">Add a comment&#8230;</string>
    <string name="action_approve">Approve</string>
    <string name="action_reject">Reject</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="confirm">OK</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_share">Share</string>
    <string name="tweet_pattern">Check out this $%1$.2f %2$s on Show &amp; Sell! http://ich-showandsell.gear.host/?itemId=%3$s</string>

    <!-- Browse fragment -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="saved_group_id" translatable="false">SAVED_GROUP_ID</string>
    <string name="saved_group_name" translatable="false">SAVED_GROUP_NAME</string>
    <string name="error_no_group">It looks like you haven\'t selected a group yet. Tap here and
        we\'ll help you choose.</string>
    <string name="last_group_loaded" translatable="false">LAST_GROUP_ID</string>

    <!-- Search -->
    <string name="search_hint">Search for an item</string>

    <!-- Manage Group -->
    <string name="error_not_group_owner">It looks like you haven\'t created a group yet. If
        you\'d like to start your own yard sale, tap here and we\'ll help you out.</string>

    <!--Tutorial-->
    <string name="tutorial_1">Welcome to Show &amp; Sell! To start off, why don\'t you find a group?</string>
    <string name="tutorial_2">The groups closest to you will show up here. Pick the one for your school or organization.</string>
    <string name="tutorial_3">Once you\'ve selected a group, the items for that group will appear in
        the <b>Group Details</b>. Tap an item to learn more.</string>
    <string name="tutorial_4">Here, you can see an item\'s price, condition, and other details. If you have questions,
        feel free to ask in the comments section. Once you\'re ready, you can buy the item right here, and then
        show the confirmation email at the Pickup Station to get your item.</string>
    <string name="tutorial_5">Back on the Group Details, you can tap the <b>+</b> icon to donate your own item
        to the yard sale.</string>
    <string name="tutorial_6">Just enter the info about the item, submit it, and then take the item to the
        pickup station for the group manager to approve it. Ta-da!</string>
    <string name="tutorial_7">Advisors can create their own groups from Settings &gt; My Group. Simply enter the
        information for your school. Under \"Extra Location Info,\" provide directions about where on campus
        buyers can pick up their items.</string>

    <!-- Strings related to Settings -->
    <string name="current_group">FAVORITE GROUP</string>
    <string name="groups">AVAILABLE GROUPS</string>
    <string name="choose_group_instructions">Selecting a group here will affect what items appear in
        your feed and where your donated items go.</string>
    <string name="manage_group">My Group</string>
    <string name="choose_group">Choose Primary Group</string>
    <string name="options">OPTIONS</string>
    <string name="actions">ACTIONS</string>
    <string name="help">HELP</string>
    <string name="report_bug">REPORT A BUG</string>
    <string name="account">Account Settings</string>

    <!-- Strings related to Edit Account -->
    <string name="action_update_account">UPDATE ACCOUNT</string>
    <string name="is_google_user" translatable="false">IS_GOOGLE_USER</string>

    <!-- Saved data -->
    <string name="group_owner_boolean" translatable="false">isGroupOwner</string>

    <!-- Example General settings -->
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <!-- CreateGroupActivity -->
    <string name="prompt_group_name">Group Name</string>
    <string name="prompt_enter_location">Pickup Address</string>
    <string name="prompt_enter_city">City</string>
    <string name="prompt_enter_state">State Abbreviation</string>
    <string name="prompt_extra_location_data">Extra Location Information</string>
    <string name="prompt_account_number">Bank Account Number</string>
    <string name="prompt_routing_number">Routing Number</string>
    <string name="prompt_DOB">Date of Birth</string>
    <string name="explanation">We need the following information to ensure that you get the proceeds
     from your fundraiser. We won\'t ever use your bank details for any unauthorized transactions.</string>
    <string name="prompt_group_password" translatable="false">Account Password</string>
    <string name="error_un_group_name_duplicate">Group name already in use</string>
    <string name="action_create_group">Create Group</string>
    <string name="rate_group">Rate this group</string>
    <string name="action_send">Send</string>
    <string name="rating_success">Rating sent successfully</string>
    <string name="error_no_internet">No connection available. Please try again later.</string>
    <string name="error_rating">Something went wrong posting the rating</string>
    <string name="prompt_donate_cash">Donation Amount&#8230;</string>
    <string name="donate_cash_label">Monetary Donation</string>

    <string name="title_activity_nav_bar" translatable="false">NavBarActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_tutorial">Help</string>


    <string name="title_activity_full_image" translatable="false">Full Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>
