<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.insertcoolnamehere.showandsell.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/group_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_group_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/location_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_enter_location"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/city_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_enter_city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/state_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_enter_state"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/extra_location_data_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_extra_location_data"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explanation"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:id="@+id/account_number_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_account_number"
                android:inputType="number"
                android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/routing_number_entry"
                android:hint="@string/prompt_routing_number"
                android:inputType="number"
                android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_DOB"
                android:id="@+id/dob_entry"
                android:inputType="date"
                android:maxLines="1"/>

            <Button
                android:id="@+id/create_group_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_create_group"
                android:textStyle="bold"
                android:background="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>