<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_settings">

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:text="@string/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/patricks_btn_padding"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/choose_group"
        android:textAlignment="textStart"
        android:paddingLeft="@dimen/patricks_btn_padding"
        android:layout_width="match_parent"
        android:id="@+id/settings_choose_default_group"
        android:background="@android:color/background_light"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:text="@string/manage_group"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:id="@+id/settings_manage_group"
        android:background="@android:color/background_light"
        android:paddingLeft="@dimen/patricks_btn_padding"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:text="@string/help"
        android:textAlignment="textStart"
        android:paddingLeft="@dimen/patricks_btn_padding"
        android:layout_width="match_parent"
        android:id="@+id/settings_help"
        android:background="@android:color/background_light"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <TextView
        android:text="@string/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/patricks_btn_padding"
        android:id="@+id/textView3" />

    <Button
        android:text="@string/action_logout"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_logout"
        android:background="@android:color/background_light" />
</LinearLayout>