<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.insertcoolnamehere.showandsell.ItemDetailActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?android:attr/panelBackground"
        android:id="@+id/item_detail_image"
        android:contentDescription="@string/item_image"/>

    <TextView
        android:text="@string/prompt_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_detail_name"
        android:layout_below="@+id/item_detail_image"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/prompt_suggested_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_detail_price"
        android:layout_below="@+id/item_detail_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/prompt_item_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_detail_condition"
        android:layout_below="@+id/item_detail_price"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/prompt_item_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_detail_description"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/item_detail_condition"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/action_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/item_detail_name"
        android:layout_alignParentEnd="true"
        android:id="@+id/item_detail_buy" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/item_comments"
        android:divider="@null"
        android:layout_below="@+id/enter_comment" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/enter_comment"
        android:hint="Add a comment"
        android:layout_below="@+id/item_detail_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
