<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.insertcoolnamehere.showandsell.DonateFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_description_entry"
                    android:hint="@string/prompt_item_description"
                    android:enabled="true"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:inputType="textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_entry"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="5"
                    android:hint="@string/prompt_item_details"
                    android:enabled="true"
                    android:inputType="textAutoCorrect|textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/item_price_entry"
                    android:hint="@string/prompt_suggested_price"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_condition_entry"
                android:prompt="@string/prompt_item_condition"
                android:paddingTop="7dp"
                android:paddingBottom="7dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_image_upload"
                android:textColor="#FFFFFF"
                android:id="@+id/upload_img_btn"
                android:background="@color/colorAccent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_donate"
                android:textColor="#FFFFFF"
                android:id="@+id/donate_btn"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
</ScrollView>
